Implement some basic thing 1. Draw something on Canvas 2. Draw backgroud image and draw a phoenix warship 3. Prepare the enemies image files

--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,13 @@
     <title>Hello World</title>
 </head>
 <body style="background:#303030;">
-   
-    <canvas id="canvasBg" height="1080" width="1500" style="display:block;background:#ffffff;margin:100px auto 0px;" />
+    <button  id="clearCanvasBtn" type="button">Clear Canvas</button>
+    <button  id="drawSquareBtn" type="button">Draw Square</button>
+    <canvas id="canvasPhoenix" ></canvas>
+    <canvas id="canvasBg" height="1080" width="1500" style="display:block;background:#ffffff;margin:100px auto 0px;" ></canvas>
+
+
+    <script src="game.js"></script> 
     
 </body>
 </html>
