1. Implement game control 2. Figured out how to draw the phoenix
Signed-off-by: nspforever <nspforever@hotmail.com>

--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Hello World</title>
+    <link rel="Stylesheet" href="game.css" />
 </head>
-<body style="background:#303030;">
+<body>
     <button  id="clearCanvasBtn" type="button">Clear Canvas</button>
     <button  id="drawSquareBtn" type="button">Draw Square</button>
-    <canvas id="canvasPhoenix" ></canvas>
-    <canvas id="canvasBg" height="1080" width="1500" style="display:block;background:#ffffff;margin:100px auto 0px;" ></canvas>
-
-
+    <canvas id="canvasBg" height="1080" width="1500"></canvas>
+    <canvas id="canvasPhoenix" height="1080" width="1500"></canvas>
     <script src="game.js"></script> 
     
 </body>
